mocks, delete+post operations
